--- a/src/main/resources/com/cwctravel/jenkinsci/plugins/htmlresource/HTMLResourceManagement/index.properties
+++ b/src/main/resources/com/cwctravel/jenkinsci/plugins/htmlresource/HTMLResourceManagement/index.properties
@@ -1,6 +1,6 @@
 # The MIT License
 #
-# Copyright (c) 2009-2010, Dominik Bartholdi
+# Copyright (c) 2009-2010, Vimil
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
